gcc/testsuite/rust/rustc/ui/parser/issues/misplaced-return-type-complex-type-issue-126311_dg.rs
fn foo<T>() where T: Default -> impl Default + 'static {}
// { dg-error "" "" { target *-*-* } .-1 }
// { help "" "" { target *-*-* } .-2 }

fn main() {}

